--- a/quote-calculator/pressure-washing.html
+++ b/quote-calculator/pressure-washing.html
@@ -94,145 +94,137 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <a href="tel:07735873694" class="call-btn" aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
 </header>
 
-<!-- ✅ INSTANT QUOTE CALCULATOR -->
-<section id="instant-quote" style="margin-bottom:40px; text-align:center;">
-<h2 style="color:black;">Instant Pressure Washing Quote</h2>
-<p style="color:black;">Add as many or as few surfaces as you like to see a tailored estimate.</p>
+<!-- ✅ PRESSURE WASHING QUOTE CALCULATOR -->
+<section class="calculator">
+<h1>Instant Pressure Washing Quote</h1>
+<p>You can add as many or as few surfaces to be pressure cleaned as you like. Each surface can be customised with the correct measurements and ground condition.</p>
 
 <div id="surfaces-container"></div>
 
-<button type="button" id="add-surface-btn" style="margin:10px;padding:10px 20px;background:black;color:white;border:none;border-radius:5px;">Add Surface</button>
-<button type="button" id="get-quote-btn" style="margin:10px;padding:10px 20px;background:white;color:black;border:2px solid black;border-radius:5px;">Get Quote</button>
+<button type="button" class="calc-button" onclick="addSurface()">Add Surface</button>
 
-<div id="quote-result" style="margin-top:20px;text-align:left;"></div>
+<button type="button" class="calc-button" onclick="getQuote()">Get Quote</button>
+
+<div id="quote-result" style="margin-top:20px;"></div>
+<div id="available-dates" style="margin-top:20px; font-weight:bold;"></div>
 </section>
 
 <script>
-const pricing = {
-"Not too bad": 1.2,
-"Dirty with growth": 1.8,
-"Very dirty": 2.5
-};
-
+let surfaceCount = 0;
 const surfacesContainer = document.getElementById('surfaces-container');
-const addSurfaceBtn = document.getElementById('add-surface-btn');
-const getQuoteBtn = document.getElementById('get-quote-btn');
 
-function createSurfaceItem() {
+function addSurface() {
+surfaceCount++;
 const div = document.createElement('div');
-div.className = 'surface-item';
-div.style.border = '1px solid #ccc';
-div.style.padding = '10px';
-div.style.margin = '10px 0';
-div.style.display = 'flex';
-div.style.flexWrap = 'wrap';
-div.style.gap = '10px';
-div.style.justifyContent = 'center';
+div.className = 'surface-entry';
+div.id = 'surface-' + surfaceCount;
 
 div.innerHTML = `
-<select class="surface-type" required>
-<option value="">Select Surface</option>
-<option value="Driveway">Driveway</option>
-<option value="Patio">Patio</option>
-<option value="Decking">Decking</option>
-<option value="Wall">Wall</option>
-<option value="Fence">Fence</option>
+<label>Surface Type:
+<select name="surfaceType" onchange="updateFields(${surfaceCount}, this.value)">
+<option value="driveway">Driveway</option>
+<option value="patio">Patio</option>
+<option value="decking">Decking</option>
+<option value="wall">Wall</option>
+<option value="fence">Fence</option>
 </select>
-
-<select class="ground-condition" required>
-<option value="">Ground Condition</option>
-<option value="Not too bad">Not too bad</option>
-<option value="Dirty with growth">Dirty with growth</option>
-<option value="Very dirty">Very dirty</option>
+</label>
+<div id="fields-${surfaceCount}" style="margin-top:10px;">
+Length (m): <input type="number" min="0" step="0.1" name="length">
+Width (m): <input type="number" min="0" step="0.1" name="width">
+</div>
+<label>Ground Condition:
+<select name="groundCondition">
+<option value="not_too_bad">Not too bad</option>
+<option value="very_dirty">Very dirty</option>
+<option value="dirty_with_growth">Dirty with growth</option>
 </select>
-
-<input type="number" class="length" placeholder="Length (m)" min="0">
-<input type="number" class="width" placeholder="Width (m)" min="0" style="display:inline-block;">
-<input type="number" class="height" placeholder="Height (m)" min="0" style="display:none;">
-
-<button type="button" class="remove-surface-btn" style="background:red;color:white;padding:5px 10px;border:none;border-radius:4px;">Remove</button>
+</label>
+<button type="button" class="calc-button" onclick="removeSurface(${surfaceCount})">Remove Surface</button>
 `;
-
-const typeSelect = div.querySelector('.surface-type');
-const widthInput = div.querySelector('.width');
-const heightInput = div.querySelector('.height');
-
-typeSelect.addEventListener('change', () => {
-if(typeSelect.value === 'Wall' || typeSelect.value === 'Fence'){
-widthInput.style.display = 'none';
-heightInput.style.display = 'inline-block';
-} else {
-widthInput.style.display = 'inline-block';
-heightInput.style.display = 'none';
-}
-});
-
-div.querySelector('.remove-surface-btn').addEventListener('click', () => {
-div.remove();
-});
 
 surfacesContainer.appendChild(div);
 }
 
-addSurfaceBtn.addEventListener('click', () => {
-createSurfaceItem();
-});
-
-getQuoteBtn.addEventListener('click', () => {
-const items = document.querySelectorAll('.surface-item');
-if(items.length === 0){
-alert("Please add at least one surface.");
-return;
-}
-
-let total = 0;
-let summary = "<h3>Quote Summary:</h3><ul>";
-const today = new Date();
-const dates = [
-new Date(today.getFullYear(), today.getMonth(), today.getDate() + 3),
-new Date(today.getFullYear(), today.getMonth(), today.getDate() + 5),
-new Date(today.getFullYear(), today.getMonth(), today.getDate() + 9)
-];
-function formatDate(d){
-let dd = String(d.getDate()).padStart(2,'0');
-let mm = String(d.getMonth()+1).padStart(2,'0');
-let yy = String(d.getFullYear()).slice(-2);
-return dd+mm+yy;
-}
-
-items.forEach(item => {
-const type = item.querySelector('.surface-type').value;
-const ground = item.querySelector('.ground-condition').value;
-const length = parseFloat(item.querySelector('.length').value) || 0;
-let area = 0;
-
-if(type === 'Wall' || type === 'Fence'){
-const height = parseFloat(item.querySelector('.height').value) || 0;
-area = length * height;
+function updateFields(id, type) {
+const fields = document.getElementById('fields-' + id);
+if (type === 'wall' || type === 'fence') {
+fields.innerHTML = `
+Width (m): <input type="number" min="0" step="0.1" name="width">
+Height (m): <input type="number" min="0" step="0.1" name="height">
+`;
 } else {
-const width = parseFloat(item.querySelector('.width').value) || 0;
+fields.innerHTML = `
+Length (m): <input type="number" min="0" step="0.1" name="length">
+Width (m): <input type="number" min="0" step="0.1" name="width">
+`;
+}
+}
+
+function removeSurface(id) {
+const div = document.getElementById('surface-' + id);
+div.remove();
+}
+
+function getQuote() {
+const entries = document.querySelectorAll('.surface-entry');
+let quoteText = '';
+let total = 0;
+
+entries.forEach(entry => {
+const type = entry.querySelector('select[name="surfaceType"]').value;
+const ground = entry.querySelector('select[name="groundCondition"]').value;
+let length = entry.querySelector('input[name="length"]')?.value || 0;
+let width = entry.querySelector('input[name="width"]')?.value || 0;
+let height = entry.querySelector('input[name="height"]')?.value || 0;
+
+// Price calculation example (per m², rounded)
+let area = 0;
+if(type === 'wall' || type === 'fence'){
+area = width * height;
+} else {
 area = length * width;
 }
 
-let cost = area * (pricing[ground] || 0);
-if(cost < 45) cost = 45; // minimum charge
+let multiplier = 1;
+if(ground === 'not_too_bad') multiplier = 1;
+if(ground === 'very_dirty') multiplier = 1.3;
+if(ground === 'dirty_with_growth') multiplier = 1.6;
 
-total += cost;
-summary += `<li><strong>${type} (${ground})</strong> - £${cost.toFixed(2)}<br>
-This involves ${ground.toLowerCase()} cleaning for the ${type.toLowerCase()}.</li>`;
+let pricePerM2 = 3; // example base
+let price = area * pricePerM2 * multiplier;
+
+if(price < 45) price = 45; // minimum charge
+
+total += price;
+
+quoteText += `<p>${type.charAt(0).toUpperCase()+type.slice(1)} (${ground.replace(/_/g,' ')}): £${price.toFixed(2)}</p>`;
+quoteText += `<p>This involves cleaning approximately ${area.toFixed(1)} m² of ${type}.</p>`;
 });
 
-summary += `</ul><p><strong>Total Estimate: £${total.toFixed(2)}</strong></p>`;
-summary += "<p>Available dates:</p><ul>";
-dates.forEach((d, i) => {
-summary += `<li>${formatDate(d)}</li>`;
-});
-summary += "<li>Other dates available – call us for details.</li></ul>";
-summary += "<p>Service area: 15 mile radius of Doncaster</p>";
+quoteText += `<h3>Total Quote: £${total.toFixed(2)}</h3>`;
 
-document.getElementById('quote-result').innerHTML = summary;
-});
-  
+document.getElementById('quote-result').innerHTML = quoteText;
+
+// Available dates
+const today = new Date();
+const options = { day: '2-digit', month: 'short', year: '2-digit' };
+const date1 = new Date(today); date1.setDate(today.getDate() + 3);
+const date2 = new Date(today); date2.setDate(today.getDate() + 5);
+const date3 = new Date(today); date3.setDate(today.getDate() + 9);
+
+const formatDate = d => {
+const day = ("0"+d.getDate()).slice(-2);
+const month = d.toLocaleString('en-GB',{month:'short'});
+const year = d.getFullYear().toString().slice(-2);
+return `${day}/${month}/${year}`;
+}
+
+document.getElementById('available-dates').innerHTML = `
+Available dates: ${formatDate(date1)}, ${formatDate(date2)}, ${formatDate(date3)}<br>
+For a different date, just give us a call.
+`;
+}
 </script>
 
 <style>
